--- a/templates/site/articolisite.html.twig
+++ b/templates/site/articolisite.html.twig
@@ -27,11 +27,18 @@
 					 </section>
 					 <!-- End top-section Area -->
 <!-- Start post Area -->
-    <div class="post-wrapper pt-40">
+    <div class="post-wrapper pt-20">
         <!-- Start post Area -->
         <section class="post-area">
             <div class="container">
-                <div class="row justify-content-center">
+							{% for p in pubblicita %}
+							 {% if p.active == 0 %}
+								 {% for pos in p.posizione %}
+									 {% if pos == "articolofull" %}{{p.script|raw}}{% endif %}
+								 {% endfor %}
+							 {% endif %}
+							{% endfor %}
+                <div class="row pt-10 justify-content-center">
                     <div class="col-lg-8">
                         <div class="single-page-post">
                             <img class="img-fluid" src="{{ asset('uploads/image/' ~ articolo.image) }}" alt="{{articolo.titolo}}">
@@ -121,7 +128,20 @@
                         </div>
                     </div>
                     <div class="col-lg-4 sidebar-area ">
-
+										{% for p in pubblicita %}
+										 {% if p.active == 0 %}
+											 {% for pos in p.posizione %}
+												 {% if pos == "articoloside" %}{{p.script|raw}}{% endif %}
+											 {% endfor %}
+										 {% endif %}
+										{% endfor %}
+										{% for p in pubblicita %}
+										 {% if p.active == 0 %}
+											 {% for pos in p.posizione %}
+												 {% if pos == "articoloside1" %}{{p.script|raw}}{% endif %}
+											 {% endfor %}
+										 {% endif %}
+										{% endfor %}
                         <div class="single_widget cat_widget">
                             <h4 class="text-uppercase pb-20">Nuovi articoli</h4>
 
@@ -131,9 +151,16 @@
 															 {% endfor %}
 	 													 </ul>
 														 <ul>
-	 													<a class="primary-btn pbtn-2 text-uppercase mx-auto" id="load-more">Leggi di pi첫</a>
+	 													<a class="primary-btn pbtn-2 text-uppercase mx-auto" id="load-more">Leggi di più</a>
 	 												</ul>
                         </div>
+												{% for p in pubblicita %}
+												 {% if p.active == 0 %}
+													 {% for pos in p.posizione %}
+														 {% if pos == "articoloside2" %}{{p.script|raw}}{% endif %}
+													 {% endfor %}
+												 {% endif %}
+												{% endfor %}
                     </div>
                 </div>
             </div>
