--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
     {% block head %}
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4496464638133853",
+    enable_page_level_ads: true
+  });
+</script>
     <html lang="zxx" class="no-js">
         <meta charset="UTF-8">
 	      <meta name="viewport" content="width=device-width, initial-scale=1">
-	      <meta name="ga-site-verification" content="VaftIEX9Q1sidR4BlGTfO2YL" />
         <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon/favicon.ico') }}">
         <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('favicon/apple-touch-icon.png') }}">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon/favicon-32x32.png') }}">
@@ -21,6 +27,19 @@
         <link href="{{ asset('css/main.css') }}" rel="stylesheet">
         <link href="{{ asset('css/jquery-eu-cookie-law-popup.css') }}" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+        <!-- Begin TradeTracker SuperTag Code -->
+<script type="text/javascript">
+
+    var _TradeTrackerTagOptions = {
+        t: 'a',
+        s: '312021',
+        chk: '09321f83641f3afab1162c31c8fdb131',
+        overrideOptions: {}
+    };
+
+    (function() {var tt = document.createElement('script'), s = document.getElementsByTagName('script')[0]; tt.setAttribute('type', 'text/javascript'); tt.setAttribute('src', (document.location.protocol == 'https:' ? 'https' : 'http') + '://tm.tradetracker.net/tag?t=' + _TradeTrackerTagOptions.t + '&amp;s=' + _TradeTrackerTagOptions.s + '&amp;chk=' + _TradeTrackerTagOptions.chk); s.parentNode.insertBefore(tt, s);})();
+</script>
+<!-- End TradeTracker SuperTag Code -->
         {% endblock %}
     <!-- Start Header Area -->
     <body class="eupopup eupopup-top"></body>
@@ -74,7 +93,7 @@
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<div class="col-lg-4 col-sm-12 footer-social">
 							<a href="https://www.facebook.com/Know-travel-674094836289413"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/knowtravel.it/"><i class="fa fa-instagram"></i></a>
 						</div>
 					</div>
 				</div>
@@ -94,4 +113,13 @@
         <script src="{{ asset('js/main.js') }}"></script>
         <script src="{{ asset('js/jquery-eu-cookie-law-popup.js') }}"></script>
         {% endblock %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123411641-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123411641-1');
+</script>
 </html>
