--- a/templates/site/categoriasite.html.twig
+++ b/templates/site/categoriasite.html.twig
@@ -15,10 +15,10 @@
 							 <div class="container">
 									 <div class="row justify-content-between align-items-center d-flex">
 											 <div class="col-lg-12 top-left">
-													 <h1 class="text-white mb-20">{{categoria.nome|capitalize}}</h1>
+													 <h1 class="text-white mb-20">{{categoria.nome}}</h1>
 													 <ul>
 															 <li><a href="{{path('home')}}">Home</a><span class="lnr lnr-arrow-right"></span></li>
-															 <li><a href="category.html">{{categoria.nome|capitalize}}</a></li>
+															 <li><a href="category.html">{{categoria.nome}}</a></li>
 													 </ul>
 											 </div>
 									 </div>
