--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -19,7 +19,7 @@
 				<div class="container">
 					<div class="row fullscreen">
 						<div class="banner-content d-flex align-items-center col-lg-12 col-md-12">
-							<h1><a class="title" href="{{ path('articolisite', { id: home.id }) }}">{{home.titolo|capitalize}}</a></h1>
+							<h1><a class="title" href="{{ path('articolisite', { id: home.id }) }}">{{home.titolo}}</a></h1>
 						</div>
 						<div class="head-bottom-meta d-flex justify-content-between align-items-end col-lg-12">
 							<div class="col-lg-6 flex-row d-flex meta-left no-padding">
@@ -75,7 +75,7 @@
 							  	<p class="white">{{home.data|date|localizeddate('full', 'none', app.request.locale, "Europe/Rome", "MMMM" )}}</p>
 							  </div>
 							  <div class="align-self-center articleindex">
-							    <h4 class="mt-0"><a href="{{ path('articolisite', { id: a.id }) }}">{{a.titolo|capitalize}}</a></h4>
+							    <h4 class="mt-0"><a href="{{ path('articolisite', { id: a.id }) }}">{{a.titolo}}</a></h4>
 							    <div class="articoloindex">{{a.articolo|slice(0,80)|raw}}...</div>
 								<div class="meta-bottom d-flex justify-content-between">
 									<p><span class="lnr lnr-bubble"></span>
